--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "http-errors": "~1.6.3"
   }
