Adding in points handling

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,7 +18,8 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["node", "react", "react-dom"],
   },
   "include": ["client/src"],
   "references": [{ "path": "./tsconfig.node.json" }]
