--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,7 +19,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["node", "react", "react-dom"],
+    "types": ["node", "react", "react-dom", "vite/client"],
   },
   "include": ["client/src"],
   "references": [{ "path": "./tsconfig.node.json" }]
