--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.19",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20.12.7",
     "crypto-js": "^4.2.0",
     "localforage": "^1.10.0",
