--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,12 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "@react-email/render": "^0.0.12",
     "axios": "^1.6.8",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
-    "http-errors": "~1.6.3"
+    "http-errors": "~1.6.3",
+    "nodemailer": "^6.9.13"
   }
 }
