--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/react-router": "^1.29.2",
     "@types/node": "^20.12.7",
     "crypto-js": "^4.2.0",
     "localforage": "^1.10.0",
