--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,19 +1,38 @@
-FROM node:21
+# syntax=docker/dockerfile:1
 
-# Working directory for the server application
-WORKDIR /app/server
+# Comments are provided throughout this file to help you get started.
+# If you need more help, visit the Dockerfile reference guide at
+# https://docs.docker.com/go/dockerfile-reference/
 
-# Copy package.json and lockfile
-COPY package.json yarn.lock ./
+# Want to help us make this template better? Share your feedback here: https://forms.gle/ybq9Krt8jtBL3iCk7
 
-# Install dependencies
-RUN yarn install --frozen-lockfile
+ARG NODE_VERSION=21.6.2
 
-# Copy server source code
+FROM node:${NODE_VERSION}-alpine
+
+# Use production node environment by default.
+ENV NODE_ENV production
+
+
+WORKDIR /usr/src/app
+
+# Download dependencies as a separate step to take advantage of Docker's caching.
+# Leverage a cache mount to /root/.yarn to speed up subsequent builds.
+# Leverage a bind mounts to package.json and yarn.lock to avoid having to copy them into
+# into this layer.
+RUN --mount=type=bind,source=package.json,target=package.json \
+    --mount=type=bind,source=yarn.lock,target=yarn.lock \
+    --mount=type=cache,target=/root/.yarn \
+    yarn install --production --frozen-lockfile
+
+# Run the application as a non-root user.
+USER node
+
+# Copy the rest of the source files into the image.
 COPY . .
 
-# Expose port for the server (adjust if needed)
-EXPOSE 8081  
+# Expose the port that the application listens on.
+EXPOSE 8081
 
-# Start the server using a script (adjust based on your project)
-CMD [ "yarn", "start"]
+# Run the application.
+CMD ["yarn", "start"]
