--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,7 +24,11 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
-
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v2.0.3
+        with:
+          envkey_VITE_ASTEROIDS_URL: ${{ secrets.SWAG_URL }}
+          envkey_VITE_KEY: ${{ secrets.KEY }}
       - name: Docker Compose build
         run: docker-compose build
         working-directory: ./
