--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -57,6 +57,7 @@ ENV NODE_ENV production
 
 # Copy package.json so that package manager commands can be used.
 COPY package.json .
+COPY .env .
 
 # Copy the production dependencies from the deps stage and also
 # the built application from the build stage into the image.
