--- a/compose.yml
+++ b/compose.yml
@@ -1,5 +1,6 @@
 services:
   server:
+    platform: linux/amd64
     build:
       context: ./server
       dockerfile: Dockerfile
@@ -13,6 +14,7 @@ services:
     image: mariamcparland/server
 
   client:
+    platform: linux/amd64
     build:
       context: ./client
       dockerfile: Dockerfile
